Overflow correction

--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ body {
   background-color: #1c96ba;
 }
 
+.test-pass-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.test-pass-content article,
+.test-pass-content aside {
+  overflow: hidden;
+}
+
 main::before {
   content: "";
   display: block;
@@ -225,9 +235,4 @@ footer p {
   font-weight: 600;
   text-align: right;
   vertical-align: bottom;
-}
-
-.test-pass-content {
-    display: flex;
-    justify-content: space-between;
 }
